--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="icon" href="/Image/icons8-elearning-100.png">
+    <link rel="icon" href="icons8-elearning-100.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section id="container">
@@ -133,12 +133,12 @@
              </div>
             <div class="footer-child">
                 <h4>Gallary</h4>
-                <img src="/Image/course-1.jpg" alt="img not found">
-                <img src="/Image/course-2.jpg" alt="img not found">
-                <img src="/Image/course-3.jpg" alt="img not found">
-                <img src="/Image/course-3.jpg" alt="img not found">
-                <img src="/Image/course-2.jpg" alt="img not found">
-                <img src="/Image/course-1.jpg" alt="img not found">
+                <img src="course-1.jpg" alt="img not found">
+                <img src="course-2.jpg" alt="img not found">
+                <img src="course-3.jpg" alt="img not found">
+                <img src="course-3.jpg" alt="img not found">
+                <img src="course-2.jpg" alt="img not found">
+                <img src="course-1.jpg" alt="img not found">
             </div>
             <div class="footer-child">
                 <h4>NewsLetter</h4>
